src/snapshots/module_loader__FileModuleLoader::load_module.snap
---
created: "2019-04-20T08:31:01.980037Z"
creator: insta@0.6.2
source: src/module_loader.rs
expression: module
---
XtFile {
    module_info: ModuleInfo {
        name: "Sample.Test",
        attrs: [
            Attribute {
                name: "output",
                value: "/sample/test/somefile.txt"
            }
        ]
    },
    use_imports: [
        ModuleUse {
            attrs: [],
            filename: "prelude.xt",
            ident: Wildcard
        },
        ModuleUse {
            attrs: [
                Attribute {
                    name: "import_attr",
                    value: "test123"
                }
            ],
            filename: "sample2.xt",
            ident: Ident(
                "Sample2"
            )
        }
    ],
    symbols: [
        SymbolDefinition {
            name: Concrete(
                "EnumSample"
            ),
            attrs: [
                Attribute {
                    name: "doc",
                    value: "This message could be one of three shapes"
                }
            ],
            value: Message(
                Enum(
                    EnumMessage {
                        variants: [
                            EnumVariant {
                                name: "One",
                                attrs: [
                                    Attribute {
                                        name: "thing.stuff",
                                        value: "xyz"
                                    },
                                    Attribute {
                                        name: "json.tag",
                                        value: "A"
                                    }
                                ],
                                content: None
                            },
                            EnumVariant {
                                name: "Two",
                                attrs: [
                                    Attribute {
                                        name: "blah",
                                        value: "X"
                                    }
                                ],
                                content: Some(
                                    Tuple(
                                        [
                                            "StructSample",
                                            "Boolean"
                                        ]
                                    )
                                )
                            },
                            EnumVariant {
                                name: "Three",
                                attrs: [],
                                content: None
                            }
                        ]
                    }
                )
            )
        },
        SymbolDefinition {
            name: Concrete(
                "StructSample"
            ),
            attrs: [
                Attribute {
                    name: "doc",
                    value: "Example of a struct/record type"
                },
                Attribute {
                    name: "http.method",
                    value: "GET"
                }
            ],
            value: Message(
                Struct(
                    StructMessage {
                        fields: [
                            StructField {
                                name: "repeated_field",
                                type_name: Generic(
                                    "Thing",
                                    Generic(
                                        "Array",
                                        Concrete(
                                            "string"
                                        )
                                    )
                                ),
                                is_optional: false,
                                attrs: [
                                    Attribute {
                                        name: "json.key",
                                        value: "X"
                                    }
                                ]
                            },
                            StructField {
                                name: "optional_field",
                                type_name: Concrete(
                                    "type"
                                ),
                                is_optional: true,
                                attrs: [
                                    Attribute {
                                        name: "json.key",
                                        value: "Y"
                                    }
                                ]
                            }
                        ]
                    }
                )
            )
        }
    ]
}
